5.ServiceMeshAndIstio/istio/destination_rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy: # Aqui é global para todos os subsets abaixo
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: A # Divide entre todos os pods A, se for 8, escolhe 1 entre os 8
      trafficPolicy: # Aqui é somente para o pod A
        loadBalancer:
          simple: RANDOM
    - name: v2
      labels:
        version: B # Divide entre todos os pods B, se for 18, escolhe 1 entre os 18
      trafficPolicy: # Aqui é somente para o pod B
        loadBalancer:
          simple: LEAST_CONN
