5.ServiceMeshAndIstio/istio/fault_injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - nginx-service
  http:
    - fault:
        # delay:
        #   fixedDelay: 3s # Fixa um delay de 10 para toda requisição
        #   percentage:
        #     value: 100
        abort:
          httpStatus: 504
          percentage:
            value: 100
      route:
      - destination:
          host: nginx-service
          subset: all

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  subsets:
    - name: all
      labels:
        app: nginx
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user"
        # Até o momento não é possível trabalhar com diferentes versão para trabalhar strict sessions (Existe um MR no Istio que ainda não foi resolvido)
